--- a/demo/src/main/resources/templates/barcodesList.html
+++ b/demo/src/main/resources/templates/barcodesList.html
@@ -1,4 +1,4 @@
-{{>workerNav}}
+{{>navigation}}
 
 		<div>
 			<h2>Codigos de barras libres</h2>			
@@ -14,6 +14,7 @@
 				{{^asign}}
 				<a href="/worker/asignedproduct/{{barcodeId}}"></strong>Barcode:  {{barcodeId}}</a>
 				<form action="/worker/deletebarcode/{{barcodeId}}" method="GET" enctype="multipart/form-data" >
+					<input type="hidden" name="_csrf" value="{{token}}"/>
 					<button type="submit" class="btn btn-default">
 						<span class="glyphicon glyphicon-upload"></span>Eliminar
 					</button>
@@ -29,6 +30,7 @@
 		{{#asign}}
 		<p>No quedan codigos de barras por asignar</p>
 		<form action="/worker/product/{{id}}" method="GET" enctype="multipart/form-data" >
+			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<button type="submit" class="btn btn-default">
  				<span class="glyphicon glyphicon-upload"></span>Volver
  			</button>
@@ -37,6 +39,7 @@
 		{{/barcodes}}
 		{{^asign}}
 		<form action="/worker/addbarcode" method="POST" enctype="multipart/form-data">
+			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<p>
 				<div class="form-group">
 					<b>Codigo: </b> <input type="number" name="barcode" placeholder="id" required />
@@ -48,7 +51,6 @@
 		
 		</form>
 		{{/asign}}
-		
 		
 	</body>
 
