--- a/demo/src/main/resources/templates/payConfirmation.html
+++ b/demo/src/main/resources/templates/payConfirmation.html
@@ -6,7 +6,8 @@
 			
 		</div>
 
-		<form action="/client/confirmedpurchase" method="GET" enctype="multipart/form-data" >
+		<form action="/confirmedpurchase" method="GET" enctype="multipart/form-data">
+			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<button type="submit" class="btn btn-default">
  					<span class="glyphicon glyphicon-upload"></span> Volver a comprar
  			</button>
