--- a/demo/src/main/resources/templates/payWall.html
+++ b/demo/src/main/resources/templates/payWall.html
@@ -6,7 +6,8 @@
 			
 		</div>
 
-		<form action="/client/payconfirmation" method="POST" enctype="multipart/form-data">
+		<form action="/payconfirmation" method="POST" enctype="multipart/form-data">
+			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<p>
 				<div class="form-group">
 					<b>Numero de tarjeta:</b> <input type="text" name="cardNumber" placeholder="Card Number" value="{{card}}" required />
