--- a/demo/src/main/resources/templates/shopingcart.html
+++ b/demo/src/main/resources/templates/shopingcart.html
@@ -1,4 +1,4 @@
-{{>clientNav}}
+{{>navigation}}
 		
 		<!-- ### CATEGORIAS DE PRODUCTO ### -->
 		<div>
@@ -9,16 +9,18 @@
 			
 			{{#cart}}
 		 	<li>		 		
-		 		<!--<a href="/product/{{id}}"></strong> {{photo}}   </a>-->
-		 		<a href="/product/{{id}}"><img src="/download_image/product/{{id}}"></img></a>
+		 		
+		 		<a href="/product/{{id}}"><img src="/download_image/product/{{id}}" width="200" height="200"></img></a>
 				<a href="/product/{{id}}"></strong> {{name}}    </a>		
-				<form action="/client/modproductquant/{{id}}" method="POST" enctype="multipart/form-data" >
+				<form action="/modproductquant/{{id}}" method="POST" enctype="multipart/form-data">
+					<input type="hidden" name="_csrf" value="{{token}}"/>
 					<b>Cantidad:</b> <input type="number" name="quant" placeholder="cantidad" value="{{quant}}"required />
 					<button type="submit" class="btn btn-default">
  						<span class="glyphicon glyphicon-upload"></span> Cambiar cantidad
  					</button>
  				</form>
- 				<form action="/client/deleteproduct/{{id}}" method="GET" enctype="multipart/form-data" >
+ 				<form action="/deleteproduct/{{id}}" method="GET" enctype="multipart/form-data">
+					<input type="hidden" name="_csrf" value="{{token}}"/>
 					<button type="submit" class="btn btn-default">
  						<span class="glyphicon glyphicon-upload"></span> Eliminar del carrito
  					</button>
@@ -28,7 +30,8 @@
 			
 		</ul>
 		
- 		<form action="/client/buy" method="GET" enctype="multipart/form-data" >
+ 		<form action="/buy" method="GET" enctype="multipart/form-data">
+			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<button type="submit" class="btn btn-default">
 				<span class="glyphicon glyphicon-upload"></span> Confirmar compra
 			</button>
