--- a/demo/src/main/resources/templates/workersList.html
+++ b/demo/src/main/resources/templates/workersList.html
@@ -1,8 +1,9 @@
-{{>mainWorker}}
+{{>main}}
 
 		<h2>Codigos de barras:</h2>
 		
 		<form action="/worker/adminbarcodes" method="get" enctype="multipart/form-data">
+			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<p>
 				<button type="submit" class="btn btn-default">
 	 					<span class="glyphicon glyphicon-upload"></span> Administrar codigos de barras
@@ -19,7 +20,8 @@
 		 	<li>
 				<a href="/worker/{{id}}"></strong> {{name}} </a><br>
 				<a href="/worker/{{id}}"></strong> Admin: {{#isManager}}Si{{/isManager}}{{^isManager}}No{{/isManager}}</a><br>		
-				<form action="/worker/deleteworker/{{id}}" method="GET" enctype="multipart/form-data" >
+				<form action="/worker/deleteworker/{{id}}" method="GET" enctype="multipart/form-data">
+					<input type="hidden" name="_csrf" value="{{token}}"/>
 					<button type="submit" class="btn btn-default">
  						<span class="glyphicon glyphicon-upload"></span> Eliminar
  					</button>
@@ -30,6 +32,7 @@
 		</ul>
 		
 		<form action="/worker/addworker" method="get" enctype="multipart/form-data">
+			<input type="hidden" name="_csrf" value="{{token}}"/>
 			<p>
 				<button type="submit" class="btn btn-default">
 	 					<span class="glyphicon glyphicon-upload"></span> Añadir Trabajador
